--- a/package.json
+++ b/package.json
@@ -32,8 +32,13 @@
         "html-webpack-plugin": "^2.21.0",
         "raw-loader": "^0.5.1",
         "style-loader": "^0.13.1",
-        "html-loader":"^0.4.3",
+        "html-loader": "^0.4.3",
         "webpack": "^1.13.1",
         "webpack-dev-server": "^1.6.5"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
